force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Margin__c.field-meta.xml
<CustomField>
    <fullName>Account_Margin__c</fullName>
    <formula>SBQQ__Account__r.Discount_Margin__c</formula>
    <label>Account Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>