force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Delivery_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Delivery_Email_1__c</fullName>
    <label>Additional Delivery Email 1</label>
    <type>Email</type>
</CustomField>