force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Delivery_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Delivery_Email_2__c</fullName>
    <label>Additional Delivery Email 2</label>
    <type>Email</type>
</CustomField>