force-app/main/default/objects/SBQQ__Quote__c/fields/Amendment_Approved__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Approved</label>
    <type>Checkbox</type>
</CustomField>