force-app/main/default/objects/SBQQ__Quote__c/fields/Amendment_Details__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Details__c</fullName>
    <label>Change Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>