force-app/main/default/objects/SBQQ__Quote__c/fields/Amendment_Quote__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Quote</label>
    <type>Checkbox</type>
</CustomField>