force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Approval_Deadline__c</fullName>
    <label>Approval Deadline</label>
    <type>DateTime</type>
</CustomField>