force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage__c</fullName>
    <label>Approval Stage</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>