force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Status_Tax__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Tax__c</fullName>
    <label>Approval Status Tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>