force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Submission_Time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submission_Time__c</fullName>
    <label>Approval Submission Time</label>
    <type>DateTime</type>
</CustomField>