force-app/main/default/objects/SBQQ__Quote__c/fields/B2B_Order_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order_Error_Message__c</fullName>
    <label>B2B Order Error Message</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>