force-app/main/default/objects/SBQQ__Quote__c/fields/B2B_Order_Error_Message_Appended__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order_Error_Message_Appended__c</fullName>
    <label>B2B Order Error Message Appended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>