force-app/main/default/objects/SBQQ__Quote__c/fields/Company_Margin__c.field-meta.xml
<CustomField>
    <fullName>Company_Margin__c</fullName>
    <formula>$Setup.Company_Margin__c.Margin__c</formula>
    <label>Company Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>