force-app/main/default/objects/SBQQ__Quote__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <formula>SBQQ__PrimaryContact__r.Email</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>