force-app/main/default/objects/SBQQ__Quote__c/fields/County_Code__c.field-meta.xml
<CustomField>
    <fullName>County_Code__c</fullName>
    <label>County Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>