force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Charge__c.field-meta.xml
<CustomField>
    <fullName>Customer_Charge__c</fullName>
    <label>Customer Charge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>