force-app/main/default/objects/SBQQ__Quote__c/fields/DateTag__c.field-meta.xml
<CustomField>
    <fullName>DateTag__c</fullName>
    <label>DateTag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>