force-app/main/default/objects/SBQQ__Quote__c/fields/Days_Order_Created_From_Case__c.field-meta.xml
<CustomField>
    <fullName>Days_Order_Created_From_Case__c</fullName>
    <formula>ABS(

CASE(MOD (datevalue(  Intake_Case__r.CreatedDate )- DATE(1985,6,24),7),
0 , CASE( MOD( Datevalue(  CreatedDate  ) - datevalue(Intake_Case__r.CreatedDate)
,7),1,2,2,3,3,4,4,5,5,5,6,5,1)
,
1 , CASE( MOD( Datevalue( CreatedDate) - datevalue(Intake_Case__r.CreatedDate)
,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Datevalue( CreatedDate ) - datevalue(Intake_Case__r.CreatedDate)
,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Datevalue( CreatedDate) - datevalue(Intake_Case__r.CreatedDate)
,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Datevalue( CreatedDate) - datevalue(Intake_Case__r.CreatedDate)
,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Datevalue( CreatedDate) - datevalue(Intake_Case__r.CreatedDate)
,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Datevalue( CreatedDate) - datevalue(Intake_Case__r.CreatedDate)
,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR((( CreatedDate ) - ( Intake_Case__r.CreatedDate) )/7)*5)-1 +

( CreatedDate - Intake_Case__r.CreatedDate) - (datevalue( CreatedDate) -
datevalue(Intake_Case__r.CreatedDate))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Order Created From Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>