force-app/main/default/objects/SBQQ__Quote__c/fields/Delivery_Charge__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Charge__c</fullName>
    <label>Delivery Charge</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>