force-app/main/default/objects/SBQQ__Quote__c/fields/Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Delivery Contact)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>