force-app/main/default/objects/SBQQ__Quote__c/fields/Delivery_Discount__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delivery Discount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>