force-app/main/default/objects/SBQQ__Quote__c/fields/Delivery_Message__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Message__c</fullName>
    <label>Delivery Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>