force-app/main/default/objects/SBQQ__Quote__c/fields/Delivery_Tax__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Tax__c</fullName>
    <label>Delivery Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>