force-app/main/default/objects/SBQQ__Quote__c/fields/Delivery_Total__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Total__c</fullName>
    <formula>Delivery_Charge__c -  Delivery_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>