force-app/main/default/objects/SBQQ__Quote__c/fields/Discount_Margin__c.field-meta.xml
<CustomField>
    <fullName>Discount_Margin__c</fullName>
    <label>Discount Margin</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>