force-app/main/default/objects/SBQQ__Quote__c/fields/Disposable_Fee__c.field-meta.xml
<CustomField>
    <fullName>Disposable_Fee__c</fullName>
    <inlineHelpText>Solid waste fee/ Disposable fee for North Carolina &amp; South Carolina States</inlineHelpText>
    <label>Solid Waste fee/Disposable Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>