force-app/main/default/objects/SBQQ__Quote__c/fields/Esign_Status__c.field-meta.xml
<CustomField>
    <fullName>Esign_Status__c</fullName>
    <label>Esign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>