force-app/main/default/objects/SBQQ__Quote__c/fields/Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Type__c</fullName>
    <label>Fulfillment Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>