force-app/main/default/objects/SBQQ__Quote__c/fields/GeoCode__c.field-meta.xml
<CustomField>
    <fullName>GeoCode__c</fullName>
    <label>GeoCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>