force-app/main/default/objects/SBQQ__Quote__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>SBQQ__NetAmount__c + Tax_Amount__c +  Delivery_Tax__c + Delivery_Charge__c - Delivery_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>