force-app/main/default/objects/SBQQ__Quote__c/fields/isAccountTaxExempted__c.field-meta.xml
<CustomField>
    <fullName>isAccountTaxExempted__c</fullName>
    <formula>ISPICKVAL(SBQQ__Account__r.Tax_Exempt__c, &quot;Yes&quot;)</formula>
    <label>isAccountTaxExempted</label>
    <type>Checkbox</type>
</CustomField>