force-app/main/default/objects/SBQQ__Quote__c/fields/isApprovalReady__c.field-meta.xml
<CustomField>
    <fullName>isApprovalReady__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isApprovalReady</label>
    <type>Checkbox</type>
</CustomField>