force-app/main/default/objects/SBQQ__Quote__c/fields/isDeliveryEstimate__c.field-meta.xml
<CustomField>
    <fullName>isDeliveryEstimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeliveryEstimate</label>
    <type>Checkbox</type>
</CustomField>