force-app/main/default/objects/SBQQ__Quote__c/fields/IsProject__c.field-meta.xml
<CustomField>
    <fullName>IsProject__c</fullName>
    <formula>IF( RecordType.Name == &quot;Commercial - Flow Business&quot; ,false,true)</formula>
    <label>IsProject</label>
    <type>Checkbox</type>
</CustomField>