force-app/main/default/objects/SBQQ__Quote__c/fields/isTaxError__c.field-meta.xml
<CustomField>
    <fullName>isTaxError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTaxError</label>
    <type>Checkbox</type>
</CustomField>