force-app/main/default/objects/SBQQ__Quote__c/fields/isValidAddress__c.field-meta.xml
<CustomField>
    <fullName>isValidAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isValidAddress</label>
    <type>Checkbox</type>
</CustomField>