force-app/main/default/objects/SBQQ__Quote__c/fields/Latest_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Latest_Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Order Number</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>