force-app/main/default/objects/SBQQ__Quote__c/fields/Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Number__c</fullName>
    <description>Common carrier store location</description>
    <label>Location Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>