force-app/main/default/objects/SBQQ__Quote__c/fields/NameTag__c.field-meta.xml
<CustomField>
    <fullName>NameTag__c</fullName>
    <label>NameTag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>