force-app/main/default/objects/SBQQ__Quote__c/fields/Number_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Services__c</fullName>
    <label>Number of Services</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.isProductParent__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>