force-app/main/default/objects/SBQQ__Quote__c/fields/Number_of_Trips__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trips__c</fullName>
    <label>Number of Trips</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>