force-app/main/default/objects/SBQQ__Quote__c/fields/of_Addendum__c.field-meta.xml
<CustomField>
    <fullName>of_Addendum__c</fullName>
    <label># of Addendum</label>
    <summaryFilterItems>
        <field>Quote_Adjustment__c.Adjustment_Type__c</field>
        <operation>contains</operation>
        <value>Addendum</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Adjustment__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>