force-app/main/default/objects/SBQQ__Quote__c/fields/Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Onboarded__c</fullName>
    <formula>SBQQ__Account__r.Onboarded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarded?</label>
    <type>Checkbox</type>
</CustomField>