force-app/main/default/objects/SBQQ__Quote__c/fields/Order_API_Request__c.field-meta.xml
<CustomField>
    <fullName>Order_API_Request__c</fullName>
    <label>Order API Request</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>