force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Comments__c.field-meta.xml
<CustomField>
    <fullName>Quote_Comments__c</fullName>
    <label>Quote Comments</label>
    <type>TextArea</type>
</CustomField>