force-app/main/default/objects/SBQQ__Quote__c/fields/Sales_Rep_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Manager_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Manager 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>