force-app/main/default/objects/SBQQ__Quote__c/fields/Sales_Rep_Manager_3__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Manager_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Manager 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>