force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Status__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Status__c</fullName>
    <description>Status indicating where quote is in its lifecycle.</description>
    <inlineHelpText>Status indicating where quote is in its lifecycle.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote Header Review</fullName>
                <default>true</default>
                <label>Quote Header Review</label>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Add/Edit Products</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
                <label>Submit for Approval</label>
            </value>
            <value>
                <fullName>Document Preparation</fullName>
            </value>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>