force-app/main/default/objects/SBQQ__Quote__c/fields/ScheduledRejectComment__c.field-meta.xml
<CustomField>
    <fullName>ScheduledRejectComment__c</fullName>
    <label>ScheduledRejectComment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>