force-app/main/default/objects/SBQQ__Quote__c/fields/SignatureTag__c.field-meta.xml
<CustomField>
    <fullName>SignatureTag__c</fullName>
    <label>SignatureTag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>