force-app/main/default/objects/SBQQ__Quote__c/fields/SN_SF_CPQ__redirect__c.field-meta.xml
<CustomField>
    <fullName>SN_SF_CPQ__redirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>redirect</label>
    <type>Checkbox</type>
</CustomField>