force-app/main/default/objects/SBQQ__Quote__c/fields/SN_SF_CPQ__Send_Invite_In_Background__c.field-meta.xml
<CustomField>
    <fullName>SN_SF_CPQ__Send_Invite_In_Background__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This option will allow the invites to run in the background.
For this option to work you must use a template setting.</description>
    <label>Send Invite In Background</label>
    <type>Checkbox</type>
</CustomField>