force-app/main/default/objects/SBQQ__Quote__c/fields/SN_SF_CPQ__SignNow_Invite_CC__c.field-meta.xml
<CustomField>
    <fullName>SN_SF_CPQ__SignNow_Invite_CC__c</fullName>
    <description>Please Provide a list of CC emails separated by &#39;,&#39; that will be used as cc&#39;s to the SignNow document signature invite.</description>
    <label>SignNow Invite CC</label>
    <type>TextArea</type>
</CustomField>