force-app/main/default/objects/SBQQ__Quote__c/fields/SN_SF_CPQ__SignNow_Sending_Options__c.field-meta.xml
<CustomField>
    <fullName>SN_SF_CPQ__SignNow_Sending_Options__c</fullName>
    <label>SignNow Sending Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allow Self Signer and Auto Sending</fullName>
                <default>true</default>
                <label>Allow Self Signer and Auto Sending</label>
            </value>
            <value>
                <fullName>Edit Email Invite before Sending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>