force-app/main/default/objects/SBQQ__Quote__c/fields/SN_SF_CPQ__SignNow_Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>SN_SF_CPQ__SignNow_Signer_Email__c</fullName>
    <description>(         Self Signer In Person       )  For in person signing this email will be used as the referenced signer of the document.

(Normal Invite Edit Email Option )  For normal signature invite this email will be assigned to the first role of the document.</description>
    <label>SignNow Signer Email</label>
    <type>Email</type>
</CustomField>