force-app/main/default/objects/SBQQ__Quote__c/fields/SN_SF_CPQ__SignNow_Template_Setting_Id__c.field-meta.xml
<CustomField>
    <fullName>SN_SF_CPQ__SignNow_Template_Setting_Id__c</fullName>
    <label>SignNow Template Setting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>