force-app/main/default/objects/SBQQ__Quote__c/fields/SN_SF_CPQ__sn_mobile__c.field-meta.xml
<CustomField>
    <fullName>SN_SF_CPQ__sn_mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checking this box will load the mobile web view when users are signing in-person on a mobile device like an iPad.</description>
    <label>SignNow Mobile</label>
    <type>Checkbox</type>
</CustomField>