force-app/main/default/objects/SBQQ__Quote__c/fields/Sub_Level__c.field-meta.xml
<CustomField>
    <fullName>Sub_Level__c</fullName>
    <formula>TEXT(SBQQ__Account__r.Sub_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Level</label>
    <type>Text</type>
</CustomField>