force-app/main/default/objects/SBQQ__Quote__c/fields/Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount__c</fullName>
    <label>Target Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.Target_Customer_Amount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>