force-app/main/default/objects/SBQQ__Quote__c/fields/Tax_API_Response__c.field-meta.xml
<CustomField>
    <fullName>Tax_API_Response__c</fullName>
    <label>Tax API Response</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>