force-app/main/default/objects/SBQQ__Quote__c/fields/Tax_Exempted__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Exempted?</label>
    <type>Checkbox</type>
</CustomField>