force-app/main/default/objects/SBQQ__Quote__c/fields/TitleTag__c.field-meta.xml
<CustomField>
    <fullName>TitleTag__c</fullName>
    <label>TitleTag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>