force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Approved_Changes__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Changes__c</fullName>
    <formula>of_Addendum__c + of_Change_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Approved Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>