force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Cost__c</fullName>
    <label>Total Product Cost</label>
    <summarizedField>SBQQ__QuoteLine__c.List_Cost__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>