force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Amendment_Quote.recordType-meta.xml
<RecordType>
    <fullName>Amendment_Quote</fullName>
    <active>true</active>
    <label>Amendment Quote</label>
</RecordType>