force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Commercial_Flow_Business.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Flow_Business</fullName>
    <active>true</active>
    <label>Commercial - Flow Business</label>
</RecordType>