force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Commercial_Project.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Project</fullName>
    <active>true</active>
    <label>Commercial - Contract</label>
</RecordType>