force-app/main/default/objects/SBQQ__Quote__c/validationRules/A_new_quote_should_always_be_primary.validationRule-meta.xml
<ValidationRule>
    <fullName>A_new_quote_should_always_be_primary</fullName>
    <active>false</active>
    <description>A new quote should always be primary</description>
    <errorConditionFormula>AND(ISNEW(), NOT(SBQQ__Primary__c) )</errorConditionFormula>
    <errorMessage>Please mark the Quote as Primary</errorMessage>
</ValidationRule>