force-app/main/default/objects/SBQQ__Quote__c/validationRules/Do_not_allow_skipping_of_stages_contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_allow_skipping_of_stages_contract</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.DeveloperName == &#39;Commercial_Project&#39;, 
ISCHANGED( SBQQ__Status__c ) ,

CASE(SBQQ__Status__c,
&#39;Quote Header Review&#39;, 1,
&#39;Add/Edit Products&#39;, 2,
&#39;Approval&#39;, 3,
&#39;Document Preparation&#39;, 4,
&#39;Contract&#39;, 5,
&#39;Complete&#39;, 6,
0) 
&gt; 
CASE(PRIORVALUE(SBQQ__Status__c),
&#39;Quote Header Review&#39;, 1,
&#39;Add/Edit Products&#39;, 2,
&#39;Approval&#39;, 3,
&#39;Document Preparation&#39;, 4,
&#39;Contract&#39;, 5,
&#39;Complete&#39;, 6,
0) + 1



)</errorConditionFormula>
    <errorMessage>You cannot skip a stage.</errorMessage>
</ValidationRule>